[package]
name = "zohohorrorshow"
version = "0.7.4"
authors = ["Xymist <james@jamieduerden.me>"]
repository = "https://github.com/Xymist/zohohorrorshow"
readme = "README.md"
license-file = "LICENSE.md"
description = "A library for interacting with the Zoho Projects API"
edition = "2018"

[dependencies]
failure = "0.1.6"
reqwest = "0.9.22"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
oauth2 = "3.0.0-alpha.6"
url = "2.1.0"
webbrowser = "0.5.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[dev-dependencies]
dotenv = "0.15.0"
