[package]
name = "zohohorrorshow"
version = "0.7.7"
authors = ["Xymist <james@jamieduerden.me>"]
repository = "https://github.com/Xymist/zohohorrorshow"
readme = "README.md"
license-file = "LICENSE.md"
description = "A library for interacting with the Zoho Projects API"
edition = "2018"

[dependencies]
# Blocking because it's easier to use, async_iterators aren't stable yet,
# and the Zoho API is slow enough (and rate-limited heavily enough) that
# it doesn't matter.
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
serde = "1.0.103"
serde_json = "1.0.42"
oauth2 = "3.0.0-alpha.6"
url = "2.1.0"
webbrowser = "0.5.2"
openssl = { version = "0.10.24", features = ["vendored"] }
tracing = "0.1.38"
thiserror = "1.0.40"

[dependencies.chrono]
features = ["serde"]
version = "0.4.10"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
