[package]
name = "zohohorrorshow"
version = "0.7.7"
authors = ["Xymist <james@jamieduerden.me>"]
repository = "https://github.com/Xymist/zohohorrorshow"
readme = "README.md"
license-file = "LICENSE.md"
description = "A library for interacting with the Zoho Projects API"
edition = "2018"

[dependencies]
# Blocking because it's easier to use, async_iterators aren't stable yet,
# and the Zoho API is slow enough (and rate-limited heavily enough) that
# it doesn't matter.
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
serde = "1.0.160"
serde_json = "1.0.96"
oauth2 = "4.3.0"
url = "2.3.1"
webbrowser = "0.8.9"
openssl = { version = "0.10.24", features = ["vendored"] }
tracing = "0.1.38"
thiserror = "1.0.40"
chrono = { version = "0.4.24", features = ["serde"] }


[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
